# LSC-PM_solar_miniplant

./: .gitignore  README.md  analysis.py  analysis_angle_dependency.py  angle_optimization_simulation.py  basic_reactor_simulation.py  miniplant_reactor.py  pyproject.toml  requirements.txt  scene_creator.py  setup.py  solar_data.py  solar_position.py  sunpath_Eindhoven.py  yearly_simulation.py
.github/workflows/: pythonpackage.yml
ephemerides/: sunpath_plot.py
miniplant/: angle_optimization_simulation.py  full_simulation.py  irradiance_to_photon_flux.py  locations.py  scene_creator.py  simulation_runner.py  solar_data.py  surface_variation.py  utils.py
miniplant/ephemerides/: sunpath_plot.py
miniplant/experimental_comparison/: experimental_conditions_results.csv  experimental_conditions_results_analysis.py  simulate_experimental_conditions.py
paper_results/: Angle_optimization_plot.py  Eindhoven_0deg_results.csv  Eindhoven_10deg_results.csv  Eindhoven_15deg_results.csv  Eindhoven_20deg_results.csv  Eindhoven_25deg_results.csv  Eindhoven_30deg_results.csv  Eindhoven_35deg_results.csv  Eindhoven_40deg_results.csv  Eindhoven_45deg_results.csv  Eindhoven_50deg_results.csv  Eindhoven_55deg_results.csv  Eindhoven_5deg_results.csv  Eindhoven_60deg_results.csv  Eindhoven_65deg_results.csv  Eindhoven_70deg_results.csv  Eindhoven_75deg_results.csv  Eindhoven_80deg_results.csv  Eindhoven_85deg_results.csv  Eindhoven_90deg_results.csv  Yearly_result_plot.py  generate_cumulative_angle_optimization_plot.py  generate_yearly_result_plot.py  recalculate_efficiency.py
reactor_data/: Evonik_lr305_normalized_to_1m.txt
tests/: test_scene_creator.py  test_simulation_runner.py  test_solar_data.py
(+123 files in other folders)
