[project]
name = "miniplant"
version = "1.0.0a1"
description = "Code for 'Development of an Off-Grid Solar-Powered Autonomous Chemical Mini-Plant for Producing Fine Chemicals'"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["chemistry", "solar energy", "science"]
authors = [
  {name = "Stefan Zondag", email = "s.d.a.zondag@uva.nl" },
  {name = "Dario Cambie", email = "dario.cambie@mpikg.mpg.de" }
]
maintainers = [
  {name = "Dario Cambie", email = "dario.cambie@mpikg.mpg.de" }
]
classifiers = [  # Optional
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'pvtrace @ git+https://github.com/cambiegroup/pvtrace.git@miniplant_v1.0',
  'pvlib>=0.8.1',
  'tables',
  'tqdm>=4.9.0',
  'meshcat>=0.1.1'
]
[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]
[project.urls]  # Optional
"Homepage" = "https://github.com/Noel-Research-Group/LSC-PM_solar_miniplant"
"Source" = "https://github.com/Noel-Research-Group/LSC-PM_solar_miniplant"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"miniplant.reactor_data" =  ["*.tsv"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
line-length = 120
